--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-comorment.funcenrich implements the genetic correlation and functional enrichment analysis performed for work package 4 of the CoMorMent H2020 EU grant.
+comorment.funcenrich implements some genetic correlation and functional enrichment analysis performed for work package 4 of the CoMorMent H2020 EU grant.
 
 ## Installation
 
